--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,7 +29,8 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button [disabled]="form.invalid" class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button *ngIf="!cargando" [disabled]="form.invalid" class="btn btn-primary submit-btn btn-block">Login</button>
+                  <button *ngIf="cargando" [disabled]="true" class="btn btn-primary submit-btn btn-block"><i class="fa fa-spinner fa-spin" aria-hidden="true"></i> Ingresando</button>
                 </div>
 
 
